--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ kombu==5.0.2
 numpy==1.20.1
 pandas==1.2.3
 prompt-toolkit==3.0.16
+psycopg2==2.8.6
 python-dateutil==2.8.1
 pytz==2021.1
 requests==2.25.1
